changes to guest views

--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -38,6 +38,13 @@
   position: fixed
   top: 5px
   right: 5px
+  font-size: 20px
+
+.visitor-ui-refresh-icon
+  position: fixed
+  top: 5px
+  left: 5px
+  font-size: 20px  
 
 .btn-xxlg
   margin: 20px 20px 20px 20px
@@ -71,7 +78,14 @@
 .center-buttons
   text-align: center
 
-.form-host
+.form-with-host
+  top: 100px
+
+.form-without-host
+  top: 100px  
+
+.center
+  text-align: center  
 
 #guest-form-input-name, #guest-form-input-email, #employee_autcomplete
   font-size: 24pt
