--- a/app/views/guests/_form_with_host.haml
+++ b/app/views/guests/_form_with_host.haml
@@ -1,35 +1,41 @@
 
-= form_for(@guest, :html => { :class => 'form-horizontal'}) do |f|
-  = if @guest.errors.any?
-    .error_explanation
-      %h2
-      = pluralize(@guest.errors.count, "error")
 
-    %ul
-    = @aha.errors.full_messages.each do |msg|
-      %li
-      = msg
-  
-  .form-group
-    = f.label :name, "Name"
-    = f.text_field :name, :class => 'form-control input-lg', :hint => 'Enter your first and last name', :placeholder => 'ex: John Smith'
+%br
+  .h3.center Last step! Please fill out the information below. The person you are here to see will be automatically notified of your arrival.
+%br
 
-  .form-group
-    = f.label :name, "Company Name"
-    = f.text_field :name, :class => 'form-control input-lg', :hint => 'Enter your company name (optional)', :placeholder => '1871'
+.col-lg-6.col-lg-offset-3
+  = form_for(@guest, :html => { :class => 'form-horizontal'}) do |f|
+    = if @guest.errors.any?
+      .error_explanation
+        %h2
+        = pluralize(@guest.errors.count, "error")
 
-  .form-group
-    = f.label :email, "Email Address"
-    = f.email_field :email, :class => 'form-control input-lg', :hint => 'Enter your email address', :placeholder => 'johnsmith@gmail.com'
+      %ul
+      = @aha.errors.full_messages.each do |msg|
+        %li
+        = msg
+    
+    .form-group
+      = f.label :name, "Name"
+      = f.text_field :name, :class => 'form-control input-lg', :placeholder => 'Enter your first and last name ex: John Smith'
 
-  .form-group
-    = f.label :employee_name, "Hosting Member"
-    = f.text_field :employee_name, :class => 'form-control input-lg', :hint => 'Start typing the name of the person you are here to see "Hosting Member"', :placeholder => 'Dave Smith'
+    .form-group
+      = f.label :name, "Company Name"
+      = f.text_field :name, :class => 'form-control input-lg', :placeholder => '1871'
 
-  .form-group
-    = f.hidden_field :organization_id, value: @organization_id   
+    .form-group
+      = f.label :email, "Email Address"
+      = f.email_field :email, :class => 'form-control input-lg', :placeholder => 'johnsmith@gmail.com'
 
-  .form-group.center-buttons.span-3
-    = f.submit 'Register', :class => 'btn btn-success btn-xlg'
-  .form-group.center-buttons.span-3  
-    = submit_tag 'Cancel', :type => :reset, :class => 'btn btn-default btn'
+    .form-group
+      = f.label :employee_name, "Hosting Member"
+      = f.text_field :employee_name, :class => 'form-control input-lg', :placeholder => 'Start typing the name of the person you are here to see'
+
+    .form-group
+      = f.hidden_field :organization_id, value: @organization_id   
+
+    .form-group.center-buttons.span-3
+      = f.submit 'Register', :class => 'btn btn-success btn-xlg'
+    .form-group.center-buttons.span-3  
+      = submit_tag 'Cancel', :type => :reset, :class => 'btn btn-default btn'
