--- a/app/views/guests/_form_with_host.haml
+++ b/app/views/guests/_form_with_host.haml
@@ -1,7 +1,7 @@
 
 
 %br
-  .h3.center Last step! Please fill out the information below. The person you are here to see will be automatically notified of your arrival.
+  .h3.col-lg-10.col-lg-offset-1.center Last step! Please fill out the information below. The person you are here to see will be automatically notified of your arrival.
 %br
 
 .col-lg-6.col-lg-offset-3
