--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -40,12 +40,16 @@
         Other
     
     =# button_to('Meeting', organization_guests_new_with_host_path, :class => 'btn btn-primary btn-xxlg')
-	
+%br
+%br
+%br
+%br
+%br	
 
-.form-with-host
+.form-with-host.group
   = render :partial => 'form_with_host'
 
-.form-without-host
+.form-without-host.group
   = render :partial => 'form_without_host'
 
 .row  
