front end UI updates

--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -7,18 +7,19 @@
 .form-actions
   background: white
   border-top: none
+  overflow: hidden
 
 /* Button Styling */
 
 .btn-grid-center
-  position: absolute
+  position: relateive
   left: 50%
   top: 50%
   transform: translate(-50%, -50%)
 
 .btn-grid
   position: relative
-  top: 100px
+  padding-top: 10%
   /* bottom: 100px
   text-align: center
 
@@ -26,8 +27,7 @@
   position: fixed
   margin-left: -96.5px
   bottom: 25px
-  left: 50%
-  z-index: 1 
+  left: 50% 
 
 .organization-logo-container
   position: fixed
@@ -88,6 +88,15 @@
 
 .center
   text-align: center
+
+#top-row
+  height: 20%
+
+#button-row
+  height: 75%
+
+#bottom-row
+  height: 5%    
 
 .group:after
   content: ""
