updated visitor ui

--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -4,15 +4,14 @@
 .radio
   padding-top: 5px
 
-.form-actions
+.visitor-ui-form
   background: white
   border-top: none
-  overflow: hidden
 
 /* Button Styling */
 
 .btn-grid-center
-  position: relateive
+  position: relative
   left: 50%
   top: 50%
   transform: translate(-50%, -50%)
@@ -22,6 +21,7 @@
   padding-top: 10%
   /* bottom: 100px
   text-align: center
+  height: 100%
 
 .bottom-logo-container
   position: fixed
@@ -93,7 +93,7 @@
   height: 20%
 
 #button-row
-  height: 75%
+  max-height: 75%
 
 #bottom-row
   height: 5%    
