--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -1,4 +1,4 @@
-.form-actions
+.visitor-ui-form
   .row-fluid
     .organization-logo-container
       =image_tag("your_business_logo_here_small.png")
@@ -8,7 +8,7 @@
       %i.fa.fa-refresh.icon-black
 
       
-.row-fluid
+.row
   .btn-grid
     %br
       .h3 Welcome to [Organization Name]. What brings you in today?
