--- a/app/views/users/new.haml
+++ b/app/views/users/new.haml
@@ -1,7 +1,7 @@
 .sign-up#clearance
   %h2 Sign up
 
-  -form_for @user do |form|
+  =form_for @user do |form|
     = render :partial => '/users/form', :object => form
 
     .submit-field
