deleted additional pages on form

--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -14,11 +14,11 @@
       .h3 Welcome to [Organization Name]. What brings you in today?
     %br
     .form-navigation
-      %a(href="/meeting_form")
+      %a(href="./new_with_host")
         %button(type="submit" class="btn btn-primary btn-xxlg")
           %i.fa.fa-calendar.icon-white
           Meeting
-      %a(href="/meeting_form")
+      %a(href="/new_with_host")
         %button(type="submit" class="btn btn-primary btn-xxlg")
           %i.fa.fa-user.icon-white
           Drop In    
