--- a/app/views/guests/_form_other.haml
+++ b/app/views/guests/_form_other.haml
@@ -27,8 +27,8 @@
       = f.email_field :email, :class => 'form-control input-lg', :placeholder => 'johnsmith@gmail.com'
 
     .form-group
-      = f.label :employee_name, "Hosting Member"
-      = f.text_field :employee_name, :class => 'form-control input-lg', :placeholder => 'Start typing the name of the person you are here to see'
+      = f.label :employee_name, "Other Reason"
+      = f.text_field :employee_name, :class => 'form-control input-lg', :placeholder => 'kk'
 
     .form-group
       = f.hidden_field :organization_id, value: @organization_id   
