working on jquery for guests/new

--- a/app/views/guests/_form_with_host.haml
+++ b/app/views/guests/_form_with_host.haml
@@ -36,4 +36,4 @@
     .form-group.center-buttons.span-3
       = f.submit 'Register', :class => 'btn btn-success btn-xlg'
     .form-group.center-buttons.span-3  
-      = submit_tag 'Cancel', :type => :reset, :class => 'btn btn-default btn'
+      = submit_tag 'Cancel', :type => :reset, :class => 'btn btn-default #form-back-btn'
