--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -14,8 +14,8 @@
       .h3 Welcome to [Organization Name]. What brings you in today?
     %br
     .form-navigation
-      %a(href="./new_with_host")
-        %button(type="submit" class="btn btn-primary btn-xxlg")
+      %a
+        %button(type="submit" class="btn btn-primary btn-xxlg meeting-btn")
           %i.fa.fa-calendar.icon-white
           Meeting
       %a(href="/new_with_host")
