jQuery hides buttons on click, all forms are hidden by default

--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -81,9 +81,11 @@
   text-align: center
 
 .form-with-host
+  display: none
   top: 100px
 
 .form-without-host
+  display: none
   top: 100px  
 
 .center
