getting forms to work with jQuery

--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -40,13 +40,13 @@
   position: fixed
   top: 5px
   right: 5px
-  font-size: 20px
+  font-size: 15px
 
 .visitor-ui-refresh-icon
   position: fixed
   top: 5px
   left: 5px
-  font-size: 20px  
+  image-height: 15px  
 
 .btn-xxlg
   margin: 20px 20px 20px 20px
@@ -85,6 +85,10 @@
   top: 100px
 
 .form-without-host
+  display: none
+  top: 100px  
+
+.form-other
   display: none
   top: 100px  
 
