--- a/app/views/guests/_form_other.haml
+++ b/app/views/guests/_form_other.haml
@@ -28,7 +28,7 @@
 
     .form-group
       = f.label :employee_name, "Other Reason"
-      = f.text_field :employee_name, :class => 'form-control input-lg', :placeholder => 'kk'
+      = f.text_field :employee_name, :class => 'form-control input-lg', :placeholder => "Since one of the options isn't why you are here let us know"
 
     .form-group
       = f.hidden_field :organization_id, value: @organization_id   
