--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -4,8 +4,6 @@
       =image_tag("your_business_logo_here_small.png")
     .visitor-ui-home-icon
       %i.fa.fa-cog.icon-black
-    .visitor-ui-refresh-icon
-      %i.fa.fa-refresh.icon-black
 
       
 .row
@@ -51,6 +49,9 @@
 
 .form-without-host.group
   = render :partial => 'form_without_host'
+
+.form-other.grouo
+  = render :partial => 'form_other'  
 
 .row-fluid 
   .bottom-logo-container
