--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -37,7 +37,7 @@
           %i.fa.fa-question-circle.icon-white
           Other
     
-    =# button_to('Meeting', organization_guests_new_with_host_path, :class => 'btn btn-primary btn-xxlg')
+
 %br
 %br
 %br
@@ -50,7 +50,7 @@
 .form-without-host.group
   = render :partial => 'form_without_host'
 
-.form-other.grouo
+.form-other.group
   = render :partial => 'form_other'  
 
 .row-fluid 
