--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -16,25 +16,41 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.navbar-brand
-          = link_to image_tag 'SignInEasyLogo.jpg'
+          %a.navbar-brand SignInEasy
+          =# link_to image_tag 'SignInEasyLogo.jpg'
       
         #bs-example-navbar-collapse-1.collapse.navbar-collapse
           %ul.nav.navbar-nav
+              
 
+            -if signed_in?
+
+              %li
+                =# link_to "Dashboard", organization_static_pages_dashboard_path
+                %a{:href => "#"} Dashboard
+              %li
+                =# link_to "Start Guest Module", new_organization_guest_path(@organization.id)  
+                %a{:href => "#"} Reports             
+              %li
+                =# link_to "Start Guest Module", new_organization_guest_path(@organization.id)  
+                %a{:href => "#"} Front Desk
         
           %ul.nav.navbar-nav.navbar-right
           
           
             -if signed_in?
 
-              %li
-                =# link_to "Dashboard", organization_static_pages_dashboard_path
-                %a{:href => "#"} Dashboard
+              %li.dropdown
+                %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
+                  [Organization's Name]
+                  %b.caret
+                %ul.dropdown-menu
 
-              %li
-                =# link_to "Start Guest Module", new_organization_guest_path(@organization.id)  
-                %a{:href => "#"} Start Guest Module
+                  %li
+                    %a{:href => "#"} Settings
+                  %li
+                    = link_to "Employees", user_path(current_user.id)
+
 
               %li.dropdown
                 %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
