--- a/app/views/guests/index.haml
+++ b/app/views/guests/index.haml
@@ -1,7 +1,15 @@
 .page-header
-  %h1 Visitor Log
+  %h2 
+    Dashboard - [Organization Name]
+    .btn-group.pull-right
+      %button.btn.btn-default.active{type: "button"} Today
+      %button.btn.btn-default{type: "button"} Week
+      %button.btn.btn-default{type: "button"} Month
+      %button.btn.btn-default{type: "button"} Quarter
 
 =will_paginate @guests, previous_label: h("Back"), next_label: h("Forward"), renderer: BootstrapPagination::Rails
+
+%h4 Visitor Records
 
 %table.table.table-striped.table-hover
   %thead
@@ -10,11 +18,11 @@
       %th Email
       %th Another Data Point
       %th Another Data Point
-      %th Visiting Reason
+      %th Visit Reason
       %th Date
       %th Time
       %th 
-      %th Delete
+      %th Actions
 
   %tbody
     - @guests.each do |guest|
@@ -32,6 +40,5 @@
           = guest.created_at.in_time_zone.strftime(" %I:%M %p")
         %td
         %td
+%br
 %hr
-
-= link_to 'new', new_organization_guest_path, :class => 'btn btn-primary'
