--- a/app/assets/stylesheets/modules/overrides.sass
+++ b/app/assets/stylesheets/modules/overrides.sass
@@ -1,5 +1,20 @@
+html, body
+  height: 100%
+
 .navbar
   background-image: none
   background-color: #fff
+
+#footer
+  height: 60px
+  background-color: #f5f5f5
+
+#wrap
+  min-height: 100%
+  height: auto
+  /* Negative indent footer by its height
+  margin: 0 auto -60px
+  /* Pad bottom by footer height
+  padding: 0 0 60px  
 
 
