--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -51,6 +51,8 @@
                     %a{:href => "#"} Settings
                   %li
                     = link_to "Employees", user_path(current_user.id)
+                  %li
+                    = link_to "Visitor Archive", user_path(current_user.id)                    
 
 
               %li.dropdown
