--- a/app/views/guests/index.haml
+++ b/app/views/guests/index.haml
@@ -8,12 +8,33 @@
 
 .row
   .col-sm-6.col-md-3
-    
+    .jumbotron
+      %h3.center Visitor Count
+      %h2.center 75
 
-=will_paginate @guests, previous_label: h("Back"), next_label: h("Forward"), renderer: BootstrapPagination::Rails
+  .col-sm-6.col-md-3
+    .jumbotron
+      %h3.center Visitor Count
+      %h2.center 75
+
+  .col-sm-6.col-md-3
+    .jumbotron
+      %h3.center Messages Sent
+      %h2.center 150
+
+  .col-sm-6.col-md-3
+    .jumbotron
+      %h3.center Time Saved
+      %h2.center 75 Min 
+
+.clearfix
 
 %br
 %h3.panel.panel-default.panel-heading.center Visitor Records
+
+=will_paginate @guests, previous_label: h("Back"), next_label: h("Forward"), renderer: BootstrapPagination::Rails
+
+
 
 %table.table.table-striped.table-hover
   %thead
