--- a/app/views/guests/index.haml
+++ b/app/views/guests/index.haml
@@ -10,27 +10,31 @@
   .col-sm-6.col-md-3
     .jumbotron
       %h3.center Visitor Count
+      %hr
       %h2.center 75
 
   .col-sm-6.col-md-3
     .jumbotron
       %h3.center Visitor Count
+      %hr
       %h2.center 75
 
   .col-sm-6.col-md-3
     .jumbotron
-      %h3.center Messages Sent
+      %h3.center Notifications
+      %hr
       %h2.center 150
 
   .col-sm-6.col-md-3
     .jumbotron
       %h3.center Time Saved
+      %hr
       %h2.center 75 Min 
 
 .clearfix
 
 %br
-%h3.panel.panel-default.panel-heading.center Visitor Records
+%h3.panel.panel-default.panel-heading.center Today's Visitors
 
 =will_paginate @guests, previous_label: h("Back"), next_label: h("Forward"), renderer: BootstrapPagination::Rails
 
