cleaned up sass overrides

--- a/app/views/guests/index.haml
+++ b/app/views/guests/index.haml
@@ -11,25 +11,25 @@
     .jumbotron
       %h3.center Visitor Count
       %hr
-      %h2.center 75
+      %h1.center 75
 
   .col-sm-6.col-md-3
     .jumbotron
       %h3.center Visitor Count
       %hr
-      %h2.center 75
+      %h1.center 75
 
   .col-sm-6.col-md-3
     .jumbotron
-      %h3.center Notifications
+      %h3.center Notifications Sent
       %hr
-      %h2.center 150
+      %h1.center 150
 
   .col-sm-6.col-md-3
     .jumbotron
-      %h3.center Time Saved
+      %h3.center Minutes Saved
       %hr
-      %h2.center 75 Min 
+      %h1.center 75 
 
 .clearfix
 
