updating dashboard page

--- a/app/views/guests/_form_with_host.haml
+++ b/app/views/guests/_form_with_host.haml
@@ -11,7 +11,7 @@
           = pluralize(@guest.errors.count, "error")
 
         %ul
-        = @aha.errors.full_messages.each do |msg|
+        = @guest.errors.full_messages.each do |msg|
           %li
           = msg
       .row.form-group
