--- a/app/views/guests/_form_other.haml
+++ b/app/views/guests/_form_other.haml
@@ -10,7 +10,7 @@
         = pluralize(@guest.errors.count, "error")
 
       %ul
-      = @aha.errors.full_messages.each do |msg|
+      = @guest.errors.full_messages.each do |msg|
         %li
         = msg
     
@@ -31,7 +31,7 @@
       = f.text_field :employee_name, :class => 'form-control input-lg', :placeholder => "Since one of the options isn't why you are here let us know", :required => "true"
 
     .form-group
-      = f.hidden_field :organization_id, value: @organization_id      
+      = f.hidden_field :organization_id, value: @organization_id
 
     .form-group.center-buttons.span-3
       = f.submit 'Register', :class => 'btn btn-success btn-xlg'
