--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -27,13 +27,13 @@
             -if signed_in?
 
               %li
-                =# link_to "Dashboard", organization_static_pages_dashboard_path
-                %a{:href => "#"} Dashboard
+                = link_to "Dashboard", organization_guests_path(@organization_id)
+                / %a{:href => "#"} Dashboard
               %li.disabled
                 =# link_to "Start Guest Module", new_organization_guest_path(@organization.id)  
                 %a Reports             
               %li
-                = link_to "Front Desk", new_organization_guest_path
+                = link_to "Front Desk", new_organization_guest_path(@organization_id)
             
         
           %ul.nav.navbar-nav.navbar-right
