--- a/app/views/organizations/show.haml
+++ b/app/views/organizations/show.haml
@@ -41,7 +41,7 @@ Admin:
 %br
 %h3.panel.panel-default.panel-heading.center Today's Visitors
 
-=will_paginate @guests, previous_label: h("Back"), next_label: h("Forward"), renderer: BootstrapPagination::Rails
+=will_paginate @organization, previous_label: h("Back"), next_label: h("Forward"), renderer: BootstrapPagination::Rails
 
 
 
