--- a/app/views/guests/_form_without_host.haml
+++ b/app/views/guests/_form_without_host.haml
@@ -17,12 +17,12 @@
 	  
     .form-group
   
-      
+      = f.label :name, "Name"
       = f.text_field :name, :class => 'form-control input-lg', :hint => "Enter your first and last name", :placeholder => 'ex: John Smith', :required => "true"
     
     .form-group
-      = f.label :name, "Company Name"
-      = f.text_field :name, :class => 'form-control input-lg', :hint => 'Enter your company name (optional)', :placeholder => '1871'
+      = f.label :company, "Company Name"
+      = f.text_field :company, :class => 'form-control input-lg', :hint => 'Enter your company name (optional)', :placeholder => '1871'
     
     .form-group
       = f.label :email, "Email Address"
@@ -30,6 +30,8 @@
     
     .form-group
       = f.hidden_field :organization_id, value: @organization_id
+    .form-group
+      = f.hidden_field :reason, :value => "Tour"      
 
     
     .form-group.center-buttons.span-3
