--- a/app/views/guests/show.haml
+++ b/app/views/guests/show.haml
@@ -1,6 +1,6 @@
-  .row
-    .organization-logo-container
-      =image_tag("your_business_logo_here_small.png")
+.row
+  .organization-logo-container
+    =image_tag("your_business_logo_here_small.png")
 
   .show-page-text
     %br
@@ -12,7 +12,7 @@
     %h2 (You also got a cool e-mail with wifi information and our user policies)
     %br
     %p Redirecting back to the registration page in a moment...
-    = link_to "or go now", new_guest_path, id: "link"
+    =# link_to "or go now", new_organization_guest_path, id: "link"
 
 .row  
   .bottom-logo-container
@@ -21,5 +21,5 @@
 :javascript
 // redirect to new guest page after 4 seconds
   window.setTimeout(function() {
-     window.location.href = '/guests/new';
+     window.location.href = '../guests/new';
   }, 4000);
