--- a/app/views/organizations/_organization_form.haml
+++ b/app/views/organizations/_organization_form.haml
@@ -1,4 +1,4 @@
-= form_for @organization, remote: true, html: {novalidate: true} do |f|
+= form_for @organization, remote: true, authenticity_token: true do |f|
   = f.label :name
   = f.text_field :name
 
