--- a/app/views/guests/index.haml
+++ b/app/views/guests/index.haml
@@ -3,8 +3,8 @@
     Dashboard - [Organization Name]
     .btn-group.pull-right
       %button.btn.btn-default.active{type: "button"} Today
-      %button.btn.btn-default{type: "button"} Week
-      %button.btn.btn-default{type: "button"} Month
+      %button.btn.btn-default.disabled{type: "button"} Week
+      %button.btn.btn-default.disabled{type: "button"} Month
 
 .row
   .col-sm-6.col-md-3
@@ -33,8 +33,6 @@
 %h3.panel.panel-default.panel-heading.center Today's Visitors
 
 =will_paginate @guests, previous_label: h("Back"), next_label: h("Forward"), renderer: BootstrapPagination::Rails
-
-
 
 %table.table.table-striped.table-hover
   %thead
