creating show page as a jQuery window

--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -81,14 +81,22 @@
   text-align: center
 
 .form-with-host
+  padding-top: 10%
   display: none
   top: 100px
 
 .form-without-host
+  padding-top: 10%  
   display: none
   top: 100px  
 
+.show-page-text
+  display: none  
+  top: 100px  
+  padding-top: 10% 
+
 .form-other
+  padding-top: 10%
   display: none
   top: 100px  
 
