--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -46,7 +46,10 @@
   = render :partial => 'form_without_host'
 
 .form-other.group
-  = render :partial => 'form_other' 
+  = render :partial => 'form_other'
+
+.show-page-text
+  = render :partial => 'confirmation'   
 
 .row-fluid 
   .bottom-logo-container
