--- a/app/views/guests/_form_without_host.haml
+++ b/app/views/guests/_form_without_host.haml
@@ -17,16 +17,16 @@
 	  
     .form-group
   
-      = f.label :name, "Name"
-      = f.text_field :name, :class => 'form-control input-lg', :hint => "Enter your first and last name", :placeholder => 'ex: John Smith', :required => "true"
+      =# f.label :name, "Name"
+      = f.text_field :name, :class => 'form-control input-lg', :hint => "", :placeholder => 'First and Last Name', :required => "true"
     
     .form-group
-      = f.label :company, "Company Name"
-      = f.text_field :company, :class => 'form-control input-lg', :hint => 'Enter your company name (optional)', :placeholder => '1871'
+      =# f.label :company, "Company Name"
+      = f.text_field :company, :class => 'form-control input-lg', :hint => 'Company', :placeholder => 'Company'
     
     .form-group
-      = f.label :email, "Email Address"
-      = f.email_field :email, :class => 'form-control input-lg', :hint => 'Enter your email address', :placeholder => 'johnsmith@gmail.com'
+      =# f.label :email, "Email Address"
+      = f.email_field :email, :class => 'form-control input-lg', :hint => 'Email Address', :placeholder => 'Email Address'
     
     .form-group
       = f.hidden_field :organization_id, value: @organization_id
