updated forms for inline labels

--- a/app/views/guests/_form_other.haml
+++ b/app/views/guests/_form_other.haml
@@ -1,5 +1,5 @@
 %br
-  .h3.col-lg-10.col-lg-offset-1.center Last step! Please fill out the information below and let us know why you are here today.
+  .h3.col-lg-10.col-lg-offset-1.center Last step! Please fill out the information below.
 %br
 
 .col-lg-6.col-lg-offset-3
@@ -28,7 +28,6 @@
 
     .form-group
       = f.hidden_field :organization_id, value: @organization_id
-    .form-group
       = f.hidden_field :reason, value: "Other" 
 
     .form-group.center-buttons.span-3
